Revision history for DBIx::Class

0.08200 2012-08-24 (UTC)
    * Fixes
        - Change one of the new tests for the previous release to not require
          SQL::Translator

0.08199 2012-08-22 (UTC)
    same as devrel

0.08198_01 2012-07-25 (UTC)
    * Fixes
        - Roll back incomplete (and broken) internal changes - restore prefetch functionality

0.08198 2012-07-11 03:43 (UTC)
    * Fixes
        - Fix a number of Win32 Test issues
        - Fix silent Oracle connection failures

0.08197 2012-07-10 10:32 (UTC)
    * New Features / Changes
        - Issue a warning when DateTime objects are passed to ->search
        - Fast populate() in void context is now even more efficient by
          going directly through execute_for_fetch bypassing execute_array
        - Fix update()/delete() on complex resultsets to no longer fall back
          to silly row-by-row deletion, construct a massive OR statement
          instead
        - Allow complex update/delete operations on sources without a
          primary key, as long as they have at least one non-nullable
          unique constraint
        - dbicadmin now better supports catalyst-style config files, by
          unrolling 'config_info' hashkeys
        - Multiple Improvements MSSQL over DBD::ADO
          - Transaction support
          - Support for VARCHAR(MAX)/VARBINARY(MAX)/NVARCHAR(MAX) datatypes
          - Nomalization of retrieved GUID values

    * Fixes
        - Fix complex has_many prefetch with resultsets not selecting identity
          columns from the root result source
        - Fix SkipFirst and FirstSkip limit dialects (Informix and Firebird)
        - Fix "Skimming limit" dialects (Top, FetchFirst) to properly check
          the order_by criteria for stability
        - Fix "Skimming limit" dialects (Top, FetchFirst) to propagate
          non-selected order criteria when part of a larger subquery
        - Fix RowNumberOver and all "skimming limits" to correctly assemble